--- a/cypress-example-kitchensink/package.json
+++ b/cypress-example-kitchensink/package.json
@@ -26,11 +26,11 @@
     "test:ci:chrome": "run-p --race start:ci e2e:chrome",
     "test:ci:record": "run-p --race start:ci e2e:record",
     "test:ci:record:parallel": "run-p --race start:ci e2e:record:parallel",
-    "cy:verify": "cypress verify",
-    "cy:version": "cypress version",
-    "cy:run": "cypress run",
-    "cy:run:record": "cypress run --record",
-    "cy:open": "cypress open",
+    "cypress:verify": "cypress verify",
+    "cypress:version": "cypress version",
+    "cypress:run": "cypress run",
+    "cypress:run:record": "cypress run --record",
+    "cypress:open": "cypress open",
     "local:open": "start-test 8080 cy:open",
     "local:run": "start-test 8080 cy:run",
     "local:run:record": "start-test 8080 cy:run:record",
