--- a/cypress-tutorial-build-todo-starter/package.json
+++ b/cypress-tutorial-build-todo-starter/package.json
@@ -7,7 +7,7 @@
     "build": "webpack",
     "watch": "webpack --watch",
     "serve": "json-server db.json",
-    "dev": "concurrently \"npm run watch\" \"npm run serve\"",
+    "start": "concurrently \"npm run watch\" \"npm run serve\"",
     "cypress:open": "cypress open",
     "cypress:all": "cypress run"
   },
