--- a/cypress-example-piechopper/package.json
+++ b/cypress-example-piechopper/package.json
@@ -9,7 +9,7 @@
     "build": "grunt",
     "postbuild": "node-sass app/style/style.scss build/served/app/css/style.css",
     "prestart": "npm run build",
-    "start": "grunt serve",
+    "start": "run-p --race server",
     "server": "nodemon --delay 2 build/server/src/server.js",
     "watch": "grunt watch",
     "pretest": "npm run build",
