--- a/graphile/package.json
+++ b/graphile/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.2.0",
+    "cypress": "4.1.0",
     "eslint_d": "^8.0.0",
     "inquirer": "^7.0.0",
     "jest": "^24.9.0",
