--- a/ai-cypress/package.json
+++ b/ai-cypress/package.json
@@ -10,6 +10,6 @@
   "license": "ISC",
   "devDependencies": {
     "@applitools/eyes.cypress": "^3.4.10",
-    "cypress": "^3.1.5"
+    "cypress": "4.2.0"
   }
 }
