--- a/birdboard/package.json
+++ b/birdboard/package.json
@@ -31,7 +31,7 @@
     "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
     "babel-eslint": "^10.0.1",
-    "cypress": "^3.4.0",
+    "cypress": "4.2.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "stylus": "^0.54.5",
