--- a/cypress-tutorial-build-todo-starter/package.json
+++ b/cypress-tutorial-build-todo-starter/package.json
@@ -30,7 +30,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
-    "cypress": "^3.1.4",
+    "cypress": "4.2.0",
     "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.19.0",
     "webpack": "^3.6.0"
