--- a/cypress-xhr-responses-recording/package.json
+++ b/cypress-xhr-responses-recording/package.json
@@ -17,7 +17,7 @@
     "vue": "^2.5.16"
   },
   "devDependencies": {
-    "cypress": "^3.4.1",
+    "cypress": "4.2.0",
     "cypress-autorecord": "^1.1.0",
     "@vue/cli-plugin-babel": "^3.0.0-beta.10",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.10",
