--- a/cypress-mailosaur/package.json
+++ b/cypress-mailosaur/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^4.2.0",
-    "faker": "^4.1.0"
+    "faker": "^4.1.0",
+    "sendmail": "^1.6.1"
   }
 }
