--- a/cypress-mailosaur/package.json
+++ b/cypress-mailosaur/package.json
@@ -14,6 +14,7 @@
     "cypress": "^4.2.0",
     "cypress-wait-until": "^1.6.1",
     "faker": "^4.1.0",
+    "mailosaur": "^6.0.5",
     "sendmail": "^1.6.1"
   }
 }
