cypress-each with poke api

--- a/cypress-api-spok/cypress/tsconfig.json
+++ b/cypress-api-spok/cypress/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "esnext",
     "lib": ["esnext", "dom"],
-    "types": ["cypress", "node", "@bahmutov/cy-api"],
+    "types": ["cypress", "node", "@bahmutov/cy-api", "cypress-each"],
     "allowJs": true,
     "resolveJsonModule": true
   },
