--- a/cypress-api-spok/package.json
+++ b/cypress-api-spok/package.json
@@ -18,6 +18,7 @@
     "@typescript-eslint/parser": "^5.7.0",
     "cy-spok": "^1.4.1",
     "cypress": "^9.1.0",
+    "cypress-each": "^1.10.0",
     "eslint": "^8.4.1",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-no-only-tests": "^2.6.0",
