--- a/auth0-cypress-demo/package.json
+++ b/auth0-cypress-demo/package.json
@@ -16,7 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cypress:open": "cypress open"
+    "cy:open": "cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,7 +30,7 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "devDependencies": {
-    "cypress": "6.4.0",
+    "cypress": "^9.6.0",
     "cypress-audit": "^0.3.0"
   },
   "repository": {
